--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -203,7 +203,7 @@
   "static.dashboard.tracercategoryheader": "Categoria de rastreamento",
   "static.ticket.changeRequest": "Solicitação de mudança",
   "static.tracerCategoryHead.tracerCategory": "Categoria de rastreamento",
-  "static.tree.copyModeling": "Use as mesmas informações de modelagem",
+  "static.tree.copyModeling": "Incluir modelagem. Nota: Transferências nunca são copiadas/movidas.",
   "static.program.programwithsameversion": "Já existe um programa com o mesmo número da versão no computador local.  Você quer subscrever este programa com novos dados?",
   "static.button.commit": "Confirmar",
   "static.extrapolation.SemiAveragesProjection": "Projeção de semi-médias",
@@ -320,6 +320,7 @@
   "static.extrapolation.Considerations": "Abaixo estão algumas considerações para selecionar um método de previsão. Os métodos de previsão no QAT são organizados do simples ao sofisticado. Em geral,",
   "static.user.oldPasswordLabel": "Senha anterior",
   "static.validated.minCountForMode": "Insira a contagem mínima para o modo",
+  "static.treeTable.PUReference": "# PU/Intervalo/Paciente (Referência)",
   "static.report.month": "Meses",
   "static.user.validpasswordlength": "A senha deve conter no máximo 30 caracteres",
   "static.extrapolation.BeforeYou": "Antes de usar esta tela, certifique-se de ter concluído o",
@@ -720,6 +721,7 @@
   "static.tree.#OfFURequiredForPeriodPerPatient": "# de FU necessário para o período por",
   "static.supplyPlan.minStock": "Stock mínimo",
   "static.procurementagent.procurementagentapprovetoshippedtime": "Insira o prazo de execução de aprovado até embarcado, para este agente de compras (em meses)",
+  "static.treeTable.PUInterval": "# PU/Intervalo/Paciente",
   "static.common.min": "Mín",
   "static.importIntoSupplyPlan.notes": "Como o Planejamento de Fornecimento do QAT exige números inteiros sem decimais, o QAT converte o consumo previsto em números inteiros, arredondando para baixo e somando os “resíduos” ao longo do tempo. Ao clicar em “Importar”, o QAT utilizará essas quantidades “residuais” convertidas no módulo Planejamento de Fornecimento. Para obter mais informações e um exemplo sobre esse processo, consulte as Orientações do Show.",
   "static.realm.realmCodeText": "Insira o nome de exibição do reino",
@@ -766,7 +768,9 @@
   "static.technicalArea.technicalAreaCodeText": "Insira o código da área técnica",
   "static.extrapolation.selectExtrapolationMethod": "Selecione os métodos de extrapolação a serem usados",
   "static.supplyPlan.reorderInterval": "Intervalo entre pedidos (meses)",
+  "static.treeTable.tab2": "Nó FU/PU",
   "static.integration.versionStatus": "Status da versão",
+  "static.treeTable.tab1": "Nó de agregação/número/porcentagem",
   "static.NodeData.ModelingTransferTab": "Aba Modelagem/Transferência",
   "static.extrapolation.SeeSections": "Consulte as seções 3 e 4 abaixo para obter uma explicação dos métodos de extrapolação e como escolher melhor os métodos para sua previsão",
   "static.dashboard.shipmentGlobalDemandViewheader": "Visão geral dos embarques",
@@ -993,6 +997,7 @@
   "static.formula.suggestedText100": "Quantidade mínima",
   "static.tree.shiftDown": "Deslocar para baixo",
   "static.listTree.addSuccessMessageAll": "Suas unidades de planejamento selecionadas foram adicionadas com sucesso. Clique em criar árvore para duplicar a árvore.",
+  "static.common.in": "em",
   "static.supplyPlan.yesAccount": "Sim - contar",
   "static.importIntoQAT.forecastTracerCategory": "Categoria do Rastreador de Previsão",
   "static.dashboard.programimport": "Importar programa de PipeLine",
@@ -1105,6 +1110,7 @@
   "static.ModelingTransfer.PopulationGrowth": "(# linear) - o exemplo abaixo mostra um crescimento populacional a cada mês em 500/mês, de janeiro de 2022 a dezembro de 2024.",
   "static.common.quarterly": "Trimestral",
   "static.common.scenarioName": "Cenários",
+  "static.tree.editIn": "Editar em",
   "static.message.role.roleAlreadyExists": "Esta função já existe",
   "static.supplyPlan.doNotIncludeInProjectedShipment": "Não incluir no balanço projetado",
   "static.loadDelDataset.deleteVersion": "Excluir a versão",
@@ -1151,6 +1157,7 @@
   "static.QATForecastImport.NationalForecast": "Previsão nacional para o plano nacional de abastecimento",
   "static.report.version": "Versão",
   "static.tree.singleUse": "Uso único",
+  "static.treeTable.updateNotes": "Observação: os valores calculados nas células cinzas só serão recalculados após clicar em `Atualizar`.",
   "static.quantimed.regionConversionFactor": "Porcentagem de importação",
   "static.forecastMethod.forecastMethod": "Método de previsão",
   "static.tooltip.SingleUse": "Se sim, a frequência e o tempo não são necessários",
@@ -1172,6 +1179,7 @@
   "static.tooltip.SemiAverages": "A semi-média estima tendências com base em duas metades de uma série. QAT divide os dados reais em duas partes iguais (metades) e a média aritmética dos valores de cada parte (metade) é calculada como os valores de y de dois pontos em uma linha. A inclinação da linha de tendência é determinada pela diferença entre esses valores de y ao longo do tempo, conforme definido pelos pontos médios das duas metades da série ou valores de x dos pontos. Consulte Mostrar Guia para obter mais informações.",
   "static.QATForecastImport.MultiRegion": "Previsão multirregional para plano de fornecimento multirregional",
   "static.whatIf.validScenario": "Selecione o cenário",
+  "static.treeTable.parentValueTooltip": "O valor é calculado com base na Data de Exibição. Para alterar o valor pai, edite o nó pai diretamente.",
   "static.roleHead.role": "Função",
   "static.ManageTree.NodeTitle": "Título do nó",
   "static.programOnboarding.programDisplayName": "Código do programa",
@@ -1296,6 +1304,7 @@
   "static.program.shippedToArrivedBySeatext": "Insira o prazo de execução de embarcado até chegado, por via marítima (em meses)",
   "static.message.confirmPassword": "As senhas devem corresponder",
   "static.message.user.forgotPasswordTokenUsed": "A senha de uso único expirou",
+  "static.treeTable.oneTimeDispensing": "Dispensação única",
   "static.forecastValidation.noConsumptionNotesFound": "Nenhuma nota de consumo encontrada",
   "static.dataEntry.doNotFollowLatestShipment": "Nota: A entrada de dados é congelada porque o programa descarregado não segue as informações de envio mais recentes.",
   "static.mt.linkColumn": "Vincular?",
@@ -1446,6 +1455,7 @@
   "static.commitVersion.commitFailed": "Ocorreu um erro ao processar o plano de abastecimento. Por favor, tente novamente",
   "static.supplyPlanFormula.monthsOfStockEx4": "Meses de stock = 3,54",
   "static.supplyPlanFormula.monthsOfStockEx3": "Meses de stock = 22.642 / 6.392",
+  "static.treeTable.conversionFactor": "Fator de conversão",
   "static.language.pourtegese": "Português",
   "static.quantimed.mapAtLeastOnePlanningUnitValidationText": "Mapeie pelo menos uma unidade de planeamento QAT",
   "static.program.confirmDelete": "Tem certeza de que deseja eliminar o (s) programa (s) local (is)?",
@@ -1685,6 +1695,7 @@
   "static.extrapolation.ARIMATextOne": "A modelagem ARIMA permite que dois modelos estatísticos projetados para séries temporais estacionárias sejam integrados e aplicados a séries temporais não estacionárias, ou seja, séries temporais que possuem tendências ou estações.",
   "static.dataset.version1Settings": "Configurações da versão 1",
   "static.commitVersion.outdatedsync": "Sua sincronização de dados mestre está desatualizada. Redirecionando para sincronização de dados mestre.",
+  "static.treeTable.nodeValueTooltip": "O valor é calculado com base na Data de Exibição.",
   "static.report.wapeFormulaNote": "Observação: Usamos aqui a fórmula do Erro de Porcentagem Absoluta Ponderada (WAPE)",
   "static.dashboard.tracercategory": "Categorias de rastreamento",
   "static.ModelingTransfer.RulesTransfer": "Regras para nós de transferência",
@@ -1774,6 +1785,7 @@
   "static.manualTagging.changeOrderOrder": "Criado = Nova linha de pedido criada pelo sistema ERP.\nAtualizado = Linha de pedido atualizada pelo sistema ERP.\nDeleted = Linha de pedido excluída pelo sistema ERP",
   "static.extrapolation.TripleExponentialTextThree": "As previsões têm parâmetros. Os parâmetros na suavização exponencial são definidos entre 0 e 1, com valores próximos de 1 favorecendo valores recentes e valores próximos de 0 favorecendo valores mais antigos. A suavização exponencial tripla aplica três parâmetros de suavização",
   "static.realm.minMosMaxGaurdrail": "Insira o limite superior para os Meses de Stock Mín.",
+  "static.treeTable.period": "Período",
   "static.extrapolation.q": "q",
   "static.extrapolation.p": "p",
   "static.month.sep": "Set",
@@ -2513,6 +2525,7 @@
   "static.manualIntegration.jsonCreationDate": "Data solicitada JSON",
   "static.inventory.expectedStock": "Stock esperado",
   "static.supplyPlan.duplicateAdjustments": "Ajustes duplicados",
+  "static.treeTable.rightClickNotes": "clique com o botão direito em qualquer linha e clique em `Abrir este nó para edição` para abrir esse nó específico em uma janela QAT separada",
   "static.report.overstock": "Acima do máximo\n",
   "static.realm.mapcountry": "Mapear país",
   "static.report.procurmentAgentLeadTimeReport": "Prazo de entrega do agente de compras (meses)",
@@ -2532,6 +2545,7 @@
   "static.dashboard.healtharea": "Áreas técnicas",
   "static.report.warehouseCapacity": "Capacidade do armazém (por programa)",
   "static.ManageTree.IconScenario": "ícone ao lado da lista suspensa de cenários. Use a lista suspensa de cenários para selecionar qual cenário visualizar e editar",
+  "static.treeTable.numberOrPercentage": "Valor do nó número/porcentagem",
   "static.planningUnit.multiplier": "Insira o factor de conversão (quantas unidades de previsão existem em 1 unidade de planeamento)",
   "static.procurementUnit.heightUnit": "Unidade de altura",
   "static.procurementUnit.unitsPerPalletEuro1": "Unidades por palete Euro1",
@@ -2559,6 +2573,7 @@
   "static.ManageTree.Extrapolation": "Extrapolação",
   "static.report.forecastErrorMonthlyFormulaNew11a": "Se",
   "static.report.forecastErrorMonthlyFormulaNew11b": "O eixo Y está na unidade de equivalência",
+  "static.tree.numberNodeValue": "Valor do nó numérico",
   "static.extrapolation.MovingAverageTextThree": "Este método é mais útil para previsões de curto prazo e é sensível às tendências. Não é apropriado para dados sazonais",
   "static.report.qtyBaseUnit": "Quantidade (unidades base)",
   "static.tree.Note": "Nota",
@@ -2785,6 +2800,7 @@
   "static.quantimed.quantimedImportSelectFileLabel": "Selecione o arquivo Quantimed que deseja importar (.xml)",
   "static.usageTemplate.persons": "# Pessoas)",
   "static.validated.restrictionInventory": "Insira a restrição de entrada de dados para Inventário",
+  "static.treeTable.numberOrPercentageTooltip": "Insira o valor ou porcentagem do pai no momento do Mês de Início. Se esse valor mudar ao longo do tempo, atualize na guia Adicionar/Editar Nó, Modelagem/Transferência.",
   "static.QATForecastImport.ExistingForecasted": "Se houver um consumo previsto existente no plano de abastecimento, a célula \"Consumo Previsto Atual\" será destacada em amarelo.",
   "static.ForecastSummary.EndForecastPeriod": "no final do período de previsão",
   "static.footer": "Quantification Analytics Tool",
@@ -3097,6 +3113,7 @@
   "static.NodeData.RepeatingForecasting": "Previsão de usos repetidos?",
   "static.CompareSelect.BuildForecast": "tela para construir uma árvore de previsão ou o",
   "static.dimension.dimensiontext": "Por favor, insira a dimensão",
+  "static.tree.percentageNodeValue": "Valor percentual do nó",
   "static.mt.notificationCount": "Contagem de Notificações",
   "static.tree.collapseTree": "Recolher árvore",
   "static.message.invalidStringLength": "As notas da versão não devem exceder 1000 caracteres",
@@ -3114,6 +3131,7 @@
   "static.ticket.header": "Central de Ajuda QAT",
   "static.user.confirmNewPasswordLabel": "Confirmar a nova senha",
   "static.realm.realm": "Reino",
+  "static.common.treeTable": "Mesa de árvore",
   "static.dataentry.units": "Unidades",
   "static.program.dataexportsuccess": "Dados exportados com sucesso",
   "static.QATForecastImport.EnableUsers": "Permite que os usuários importem previsões criadas por QAT para programas de plano do suprimento. As previsões só estão disponíveis para importação se 1) forem confirmadas como versão final e 2) houver uma previsão selecionada para cada unidade de planeamento.",
