--- a/src/assets/img/locales/sp.json
+++ b/src/assets/img/locales/sp.json
@@ -203,7 +203,7 @@
   "static.dashboard.tracercategoryheader": "Categoría de seguimiento",
   "static.ticket.changeRequest": "Solicitud de cambios al software",
   "static.tracerCategoryHead.tracerCategory": "Categoría de seguimiento",
-  "static.tree.copyModeling": "Utilice la misma información de modelado.",
+  "static.tree.copyModeling": "Incluir modelado. Nota: Las transferencias nunca se copian ni se mueven.",
   "static.program.programwithsameversion": "Ya existe un programa con la misma versión en su computador. ¿Desea sobrescribir ese programa con los nuevos datos?",
   "static.button.commit": "Confirmar",
   "static.extrapolation.SemiAveragesProjection": "Proyección de semipromedios",
@@ -320,6 +320,7 @@
   "static.extrapolation.Considerations": "continuación se presentan algunas consideraciones para seleccionar un método de estimación. Los métodos de estimación en QAT están organizados de simples a sofisticados. En general,",
   "static.user.oldPasswordLabel": "Contraseña antigua",
   "static.validated.minCountForMode": "Ingrese el conteo mínimo para el modo",
+  "static.treeTable.PUReference": "# PU / Intervalo / Paciente (Referencia)",
   "static.report.month": "Mes",
   "static.user.validpasswordlength": "La contraseña puede tener un máximo de 30 caracteres",
   "static.extrapolation.BeforeYou": "Antes de usar esta pantalla, asegúrese de haber completado el",
@@ -720,6 +721,7 @@
   "static.tree.#OfFURequiredForPeriodPerPatient": "# de FU requeridas por período por",
   "static.supplyPlan.minStock": "Stock mínimo",
   "static.procurementagent.procurementagentapprovetoshippedtime": "Ingresar el tiempo de espera desde aprobado hasta en tránsito (en meses) para este agente de compras",
+  "static.treeTable.PUInterval": "# PU / Intervalo / Paciente",
   "static.common.min": "Mín",
   "static.importIntoSupplyPlan.notes": "Debido a que la planificación de suministro de QAT requiere números enteros sin decimales, QAT convierte el consumo previsto en números enteros redondeando hacia abajo y sumando los “residuales” a lo largo del tiempo. Al hacer clic en \"Importar\", QAT utilizará estas cantidades \"residuales\" convertidas en el módulo de planificación de suministros. Para obtener más información y un ejemplo sobre este proceso, consulte la Guía del espectáculo.",
   "static.realm.realmCodeText": "Ingresar el código del dominio",
@@ -766,7 +768,9 @@
   "static.technicalArea.technicalAreaCodeText": "Ingresar el código del área técnica",
   "static.extrapolation.selectExtrapolationMethod": "Seleccione los métodos de extrapolación que se utilizarán",
   "static.supplyPlan.reorderInterval": "Frecuencia de reorden (meses)",
+  "static.treeTable.tab2": "Nodo FU/PU",
   "static.integration.versionStatus": "Status de la versión",
+  "static.treeTable.tab1": "Nodo Agregación/Número/Porcentaje",
   "static.NodeData.ModelingTransferTab": "Pestaña Modelado/Transferencia",
   "static.extrapolation.SeeSections": "Consulte las secciones 3 y 4 a continuación para obtener una explicación de los métodos de extrapolación y cómo elegir mejor los métodos para su estimación.",
   "static.dashboard.shipmentGlobalDemandViewheader": "Información General de los Pedidos",
@@ -993,6 +997,7 @@
   "static.formula.suggestedText100": "Cantidad mínima",
   "static.tree.shiftDown": "Cambiar hacia abajo",
   "static.listTree.addSuccessMessageAll": "Los productos seleccionados se han agregado correctamente. Haga clic en crear árbol para duplicar el árbol.",
+  "static.common.in": "en",
   "static.supplyPlan.yesAccount": "Sí - Incluir",
   "static.importIntoQAT.forecastTracerCategory": "Categoría de seguimiento",
   "static.dashboard.programimport": "Importación del programa de PipeLine",
@@ -1105,6 +1110,7 @@
   "static.ModelingTransfer.PopulationGrowth": "(n.° lineal): el siguiente ejemplo muestra un crecimiento poblacional de 500/mes, desde enero de 2022 hasta diciembre de 2024.",
   "static.common.quarterly": "Trimestral",
   "static.common.scenarioName": "Escenarios",
+  "static.tree.editIn": "Editar en",
   "static.message.role.roleAlreadyExists": "El rol ya existe",
   "static.supplyPlan.doNotIncludeInProjectedShipment": "No incluir en el stock proyectado",
   "static.loadDelDataset.deleteVersion": "Eliminar la versión",
@@ -1151,6 +1157,7 @@
   "static.QATForecastImport.NationalForecast": "Pronóstico nacional al plan nacional de suministro",
   "static.report.version": "Versión",
   "static.tree.singleUse": "De un solo uso",
+  "static.treeTable.updateNotes": "Nota: Los valores calculados en celdas grises solo se recalculan después de hacer clic en `Actualizar`.",
   "static.quantimed.regionConversionFactor": "Factor de conversión de región",
   "static.forecastMethod.forecastMethod": "Método de estimación",
   "static.tooltip.SingleUse": "En caso afirmativo, no se requiere frecuencia ni duración",
@@ -1172,6 +1179,7 @@
   "static.tooltip.SemiAverages": "Semi-promedio estima tendencias basadas en dos mitades de una serie. QAT divide los datos reales en dos partes iguales (mitades) y la media aritmética de los valores de cada parte (mitad) se calcula como los valores y de dos puntos en una línea. La pendiente de la línea de tendencia está determinada por la diferencia entre estos valores y a lo largo del tiempo, según lo definido por los puntos medios de las dos mitades de la serie o los valores x de los puntos. Consulte Mostrar Guíapara obtener más información.",
   "static.QATForecastImport.MultiRegion": "Estimación multirregional a plan de suministro multirregional",
   "static.whatIf.validScenario": "Seleccionar escenario",
+  "static.treeTable.parentValueTooltip": "El valor se calcula en función de la fecha de visualización. Para cambiar el valor principal, edite el nodo principal directamente.",
   "static.roleHead.role": "Rol",
   "static.ManageTree.NodeTitle": "Título del nodo",
   "static.programOnboarding.programDisplayName": "Código del programa",
@@ -1296,6 +1304,7 @@
   "static.program.shippedToArrivedBySeatext": "Ingresar el tiempo de espera por mar desde en tránsito hasta llegado (meses)",
   "static.message.confirmPassword": "Las contraseñas deben coincidir",
   "static.message.user.forgotPasswordTokenUsed": "Contraseña provisional expirada",
+  "static.treeTable.oneTimeDispensing": "Dispensación única",
   "static.forecastValidation.noConsumptionNotesFound": "No se encontraron notas de consumo",
   "static.dataEntry.doNotFollowLatestShipment": "Nota: La entrada de datos se congela porque el programa descargado no contiene la información de pedidos más reciente.",
   "static.mt.linkColumn": "¿Vincular?",
@@ -1446,6 +1455,7 @@
   "static.commitVersion.commitFailed": "Ocurrió un error al procesar el plan de suministros. Intentar de nuevo",
   "static.supplyPlanFormula.monthsOfStockEx4": "Meses de stock = 3,54",
   "static.supplyPlanFormula.monthsOfStockEx3": "Meses de stock = 22,642 / 6,392",
+  "static.treeTable.conversionFactor": "Factor de conversión",
   "static.language.pourtegese": "Português",
   "static.quantimed.mapAtLeastOnePlanningUnitValidationText": "Agregar al menos un producto",
   "static.program.confirmDelete": "¿Desea borrar el/los programa/s local/es?",
@@ -1685,6 +1695,7 @@
   "static.extrapolation.ARIMATextOne": "El modelado ARIMA permite integrar dos modelos estadísticos diseñados para series temporales estacionarias y aplicarlos a series temporales no estacionarias, es decir, series temporales que tienen tendencias o estaciones.",
   "static.dataset.version1Settings": "Configuración de la versión 1",
   "static.commitVersion.outdatedsync": "Su sincronización de datos maestros está desactualizada. Redirigiendo a la sincronización de datos maestros.",
+  "static.treeTable.nodeValueTooltip": "El valor se calcula en función de la fecha de visualización.",
   "static.report.wapeFormulaNote": "Nota: Hemos utilizado fórmulas de error de porcentaje absoluto ponderado (WAPE) aquí",
   "static.dashboard.tracercategory": "Categorías de seguimiento",
   "static.ModelingTransfer.RulesTransfer": "Reglas para nodos de transferencia",
@@ -1774,6 +1785,7 @@
   "static.manualTagging.changeOrderOrder": "Creado = Nueva línea de pedido creada por el sistema ERP.\nActualizado = Línea de pedido actualizada por el sistema ERP.\nDeleted = Línea de pedido eliminada por el sistema ERP",
   "static.extrapolation.TripleExponentialTextThree": "Los estimaciones tienen parámetros. Los parámetros en el suavizado exponencial se establecen entre 0 y 1, con valores cercanos a 1 que favorecen los valores recientes y valores cercanos a 0 que favorecen los valores más antiguos. El suavizado exponencial triple aplica tres parámetros de suavizado",
   "static.realm.minMosMaxGaurdrail": "Ingresar límite superior para el nivel MIN de meses de stock",
+  "static.treeTable.period": "Período",
   "static.extrapolation.q": "q",
   "static.extrapolation.p": "p",
   "static.month.sep": "Sep",
@@ -2513,6 +2525,7 @@
   "static.manualIntegration.jsonCreationDate": "Fecha solicitada de JSON",
   "static.inventory.expectedStock": "Stock estimado",
   "static.supplyPlan.duplicateAdjustments": "Ajustes duplicados",
+  "static.treeTable.rightClickNotes": "Haga clic derecho en cualquier fila y haga clic en `Abrir este nodo para editar` para abrir ese nodo específico en una ventana QAT separada",
   "static.report.overstock": "Por encima del Máx\n",
   "static.realm.mapcountry": "Agregar país",
   "static.report.procurmentAgentLeadTimeReport": "Plazo de entrega del agente de compras",
@@ -2532,6 +2545,7 @@
   "static.dashboard.healtharea": "Áreas técnicas",
   "static.report.warehouseCapacity": "Capacidad de almacenamiento (por programa)",
   "static.ManageTree.IconScenario": "junto al menú desplegable de escenarios. Use el menú desplegable de escenarios para seleccionar qué escenario ver y editar",
+  "static.treeTable.numberOrPercentage": "Número/valor de nodo porcentual",
   "static.planningUnit.multiplier": "Ingresar el factor de conversión [Producto (estimación) x Factor de coversión = Producto]",
   "static.procurementUnit.heightUnit": "Unidad de medida de altura",
   "static.procurementUnit.unitsPerPalletEuro1": "No. de unidades por palet Euro1",
@@ -2559,6 +2573,7 @@
   "static.ManageTree.Extrapolation": "Extrapolación",
   "static.report.forecastErrorMonthlyFormulaNew11a": "Si",
   "static.report.forecastErrorMonthlyFormulaNew11b": "El eje Y está en la unidad de equivalencia",
+  "static.tree.numberNodeValue": "Valor de nodo numérico",
   "static.extrapolation.MovingAverageTextThree": "Este método es más útil para estimaciomes a corto plazo y es sensible a las tendencias. No es apropiado para datos estacionales.",
   "static.report.qtyBaseUnit": "Cantidad (unidades base)",
   "static.tree.Note": "Nota",
@@ -2785,6 +2800,7 @@
   "static.quantimed.quantimedImportSelectFileLabel": "Seleccione el archivo Quantimed que desea importar (.xml)",
   "static.usageTemplate.persons": "# persona(s)",
   "static.validated.restrictionInventory": "Ingrese la restricción de entrada de datos para el inventario",
+  "static.treeTable.numberOrPercentageTooltip": "Ingrese el valor o porcentaje del padre en el momento del mes de inicio. Si este valor cambia con el tiempo, actualícelo en la pestaña Agregar/Editar nodo, Modelado/Transferencia.",
   "static.QATForecastImport.ExistingForecasted": "Si hay un consumo previsto existente en el plan de suministro, la celda \"Consumo previsto actual\" se resaltará en amarillo.",
   "static.ForecastSummary.EndForecastPeriod": "al final de su período de estimación",
   "static.footer": "Quantification Analytics Tool",
@@ -3097,6 +3113,7 @@
   "static.NodeData.RepeatingForecasting": "¿Estimación de usos repetidos?",
   "static.CompareSelect.BuildForecast": "pantalla para construir un árbol de estimación o el",
   "static.dimension.dimensiontext": "Ingresar la dimensión",
+  "static.tree.percentageNodeValue": "Valor de nodo porcentual",
   "static.mt.notificationCount": "Número de notificaciones",
   "static.tree.collapseTree": "Colapsar árbol",
   "static.message.invalidStringLength": "Las notas de la versión no deben exceder los 1000 caracteres",
@@ -3114,6 +3131,7 @@
   "static.ticket.header": "Servicio de asistencia técnica QAT",
   "static.user.confirmNewPasswordLabel": "Confirmar la nueva contraseña",
   "static.realm.realm": "Dominio",
+  "static.common.treeTable": "Mesa de árbol",
   "static.dataentry.units": "Unidades",
   "static.program.dataexportsuccess": "Datos exportados con éxito",
   "static.QATForecastImport.EnableUsers": "Permite que los usuarios importen estimaciones creadas por QAT a programas de planes de suministro. Las estimaciones solo están disponibles para importar si 1) están confirmadas como una versión final y 2) hay una estimación seleccionada para cada producto.",
