--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3357,5 +3357,9 @@
     "static.supplyPlan.actualQuantity":"Actual Quantity",
     "static.supplyPlan.qtyNotAvailable":"Batch Quantity Not available",
     "static.supplyPlan.actualInventoryNote1":"Click white cells to see data entry rows. Click on the `Final Inventory` row to edit batch details.",
-    "static.supplyPlan.actualInventoryNote2":"Right click to add/remove a batch, or to see the batch ledger for that batch"
+    "static.supplyPlan.actualInventoryNote2":"Right click to add/remove a batch, or to see the batch ledger for that batch",
+    "static.supplyPlan.batchTotal":"Batch Total",
+    "static.supplyPlan.inventoryTotal":"Inventory Total",
+    "static.supplyPlan.batchQtyNotAvailable":"Batch Total does not match Inventory Total",
+    "static.supplyPlan.combinationNotAllowed":"You cannot have combination of FEFO and other batch details"
 }
