--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -42,6 +42,7 @@
     "static.supplyPlanFormula.amcEx1": "Months in past = 3(Based on program planning unit)",
     "static.common.duplicateTemplate": "Duplicate Template",
     "static.supplyPlanFormula.amcEx3": "Current month = May 2020",
+    "static.extrapolation.extrapolateUsingDefaultParams": "Extrapolate using default parameters",
     "static.supplyPlanFormula.amcEx2": "Months in future = 3(Based on program planning unit)",
     "static.supplyPlanFormula.amcEx5": "Adjusted Consumption in March 2020 = 6,890",
     "static.supplyPlanFormula.amcEx4": "Consumption in Feb 2020 = 5,000",
@@ -110,6 +111,7 @@
     "static.supplyPlan.container": "40' Container",
     "static.mapProcurementUnit.validGtinText": "Enter valid GTIN",
     "static.treeTemplate.addSuccessMessageSelected": "Your selected planning units have been added successfully. Please click create tree without adding planning units to add the tree template to your tree.",
+    "static.extrapolation.missingTES&ARIMA": "Missing TES & ARIMA",
     "static.dashboard.supplyPlandata": "Supply Plan Data",
     "static.supplyPlan.mtexpectedDeliveryDate": "Receive Date",
     "static.ticket.uploadScreenshot": "Upload Screenshot",
@@ -356,6 +358,7 @@
     "static.tree.willClientsShareOnePU?": "Use QAT's Autocalculation for # of Planning Units?",
     "static.import.percentOfSupplyPlan": "% of Supply Plan",
     "static.ModelingTransfer.SimpleGrowth": "Simple Growth",
+    "static.extrapolation.bulkExtrapolation": "Bulk Extrapolation",
     "static.dashboard.procurementAgentPlanningUnit": "Procurement Agent Planning Unit",
     "static.commitVersion.upgradeLocalToLatest": "Upgrade local to latest version",
     "static.compareAndSelect.topNote": "Users can select multiple tree forecasts as their final forecast, which will aggregate the monthly forecast quantities. Users cannot select multiple consumption forecasts or a combination of tree and consumption forecasts as their final forecast.",
@@ -1268,6 +1271,7 @@
     "static.message.user.userNotFound": "User not found",
     "static.inventory.totalInvontory": "Total Inventory",
     "static.NodeData.Lag": "Lag",
+    "static.extrapolation.extrapolateTES&ARIMAUsingDefaultParams": "Extrapolate ARIMA & TES using default parameters",
     "static.country.languagetext": "Select language",
     "static.common.datasetLevel": "Program Level",
     "static.syncProgram.loadAndDeleteWithoutUncommittedChanges": "For program {{programCode}}, There is a most recent server version. Do you want to download and delete? (No server data will be deleted)",
@@ -1677,6 +1681,7 @@
     "static.supplyPlan.manualOrderQty": "Manual Order Quantity",
     "static.common.percentageregex": "Only numbers between 0 to 100 are allowed.",
     "static.tooltip.planningUnitNode": "Select a planning unit that corresponds to the selected forecasting unit Edit the parent node if the forecasting unit is incorrect",
+    "static.extrapolation.bulkExtrapolationNotPossible": "Extrapolation not possible as selected program planning units does not have enough data",
     "static.common.example": "Example",
     "static.dashboard.currency": "Currency",
     "static.dashboard.datasource": "Data source",
@@ -1963,6 +1968,7 @@
     "static.supplyPlan.maxQty": "Max Quantity",
     "static.user.validphone": "Enter Phone Number",
     "static.manualTagging.erpQty": "ERP Qty",
+    "static.extrapolation.estimateTime": "Estimated time for extrapolation in seconds : ",
     "static.ModelingTransfer.AttritionHash": "(linear #) - the example below shows attrition each month by 100/month from January 2022 to December 2024. QAT utilizes a negative number to denote a decrease or loss.",
     "static.ForecastSummary.ProcurementCosts": "Calculating the Procurement Costs",
     "static.dashboard.expiryDetails": "Projected Expired Batch Details",
@@ -2096,6 +2102,7 @@
     "static.supplyPlan.actualBalance": "Actual balance",
     "static.message.alreadyExists": "Display name already exists.",
     "static.importIntoQATSupplyPlan.pleaseSelectForecastProgramVersion": "Please select forecast program version",
+    "static.extrapolation.extrapolateUsingOptimizedArimaAndTes": "Extrapolate with optimized ARIMA & TES",
     "static.common.compare": "Compare",
     "static.shipment.plannedShipment": "Planned Shipment",
     "static.commitTree.puThatDoesNotAppearOnSelectedForecastTree": "Planning unit(s) that do not appear on any selected trees",
@@ -2488,6 +2495,7 @@
     "static.role.businessfunctiontext": "Select Business Function",
     "static.report.reviewedDate": "Latest Reviewed Date",
     "static.modelingValidation.fyDec": "Fiscal Year (e.g. FY2023 starts in Dec-22)",
+    "static.extrapolation.extrapolation": "Extrapolations",
     "static.datasource.datasourcetypetext": "Select data source type",
     "static.compareAndSelect.noOfMonths": "Number of months included in calculation",
     "static.tree.lagInMonth0Immediate": "Lag in months (0=immediate)",
@@ -2876,6 +2884,7 @@
     "static.programValidation.programCode": "Combination of program code and unique code character length must be less then 50.",
     "static.dataEntryAndAdjustments.InterpolatedLine": "The formula for the interpolated line is",
     "static.manualTagging.erpShipment": "Enterprise Resource Planning (ERP) Shipment",
+    "static.extrapolation.optimizeTES&ARIMA": "Optimize TES & ARIMA",
     "static.shipment.qty": "Quantity",
     "static.validated.minPercForMode": "Please enter min percentage for mode",
     "static.shipment.delinkingsuccess": "Shipment delinked successfully",
@@ -3387,21 +3396,12 @@
     "static.ModelingTransfer.UsingThisTab": "Using this tab",
     "static.dashboard.aggregateShipmentByProduct": "Aggregate Shipments by Planning Unit",
     "static.program.download": "Download program data",
+    "static.extrapolation.bulkExtrapolationSuccess": "Bulk Extrapolation done successfully",
     "static.equivalancyUnit.SelectedForecasts": "screen, the user can display their selected forecasts by individual planning units, or aggregate across planning units if they are connected by EUs.",
     "static.procurementUnit.validMinValueText": "Minimum of 14 characters required",
     "static.report.overspentBudget": "Overspent Budget",
     "static.currency.conversionrateusd": "Conversion rate to 1 USD",
     "static.logout.confirmLogout": "Are you sure you want to log out?",
     "static.common.node": "Node",
-    "static.pipeline.pipelineConvertorLinux": "Linux.",
-    "static.extrapolation.bulkExtrapolation": "Bulk Extrapolation",
-    "static.extrapolation.optimizeTES&ARIMA": "Optimize TES & ARIMA",
-    "static.extrapolation.missingTES&ARIMA": "Missing TES & ARIMA",
-    "static.extrapolation.extrapolateUsingDefaultParams": "Extrapolate using default parameters",
-    "static.extrapolation.extrapolateUsingOptimizedArimaAndTes": "Extrapolate with optimized ARIMA & TES",
-    "static.extrapolation.bulkExtrapolationSuccess": "Bulk Extrapolation done successfully",
-    "static.extrapolation.extrapolateTES&ARIMAUsingDefaultParams": "Extrapolate ARIMA & TES using default parameters",
-    "static.extrapolation.extrapolation": "Extrapolations",
-    "static.extrapolation.bulkExtrapolationNotPossible": "Extrapolation not possible as selected program planning units does not have enough data",
-    "static.extrapolation.estimateTime": "Estimated time for extrapolation in seconds : "
+    "static.pipeline.pipelineConvertorLinux": "Linux."
 }
