--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3403,5 +3403,6 @@
     "static.currency.conversionrateusd": "Conversion rate to 1 USD",
     "static.logout.confirmLogout": "Are you sure you want to log out?",
     "static.common.node": "Node",
-    "static.pipeline.pipelineConvertorLinux": "Linux."
+    "static.pipeline.pipelineConvertorLinux": "Linux.",
+    "static.scenarioPlanning.noShipmentsInThatRange":"No shipments in that range. Proceed to selecting `Re-Planned Shipment settings`."
 }
