Changes as per latest jira comments

--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3362,5 +3362,7 @@
     "static.supplyPlan.inventoryTotal":"Inventory Total",
     "static.supplyPlan.batchQtyNotAvailable":"Batch Total does not match Inventory Total",
     "static.supplyPlan.combinationNotAllowed":"You cannot have combination of FEFO and other batch details",
-    "static.supplyPlan.qatAutocalculations":"QAT auto-calculation"
+    "static.supplyPlan.qatAutocalculations":"QAT auto-calculation",
+    "static.supplyPlan.consumptionFEFO":"QAT Calculation (FEFO)",
+    "static.supplyPlan.adjustmentFEFO":"QAT Calculation (Best Case Scenario)"
 }
