--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3352,7 +3352,7 @@
     "static.pipeline.pipelineConvertorLinux": "Linux.",
     "static.supplyPlan.totalAdjustment": "Total Adjustment",
     "static.supplyPlan.manualAdjustment":"Adjustment (manual)",
-    "static.supplyPlan.nationalAdjustment":"National Adjustment (auto)",
+    "static.supplyPlan.nationalAdjustment":"Automatic Adjustment",
     "static.supplyPlan.projectedQuantity":"Projected Quantity",
     "static.supplyPlan.actualQuantity":"Actual Quantity",
     "static.supplyPlan.qtyNotAvailable":"Batch Quantity Not available",
@@ -3361,7 +3361,7 @@
     "static.supplyPlan.batchTotal":"Batch Total",
     "static.supplyPlan.inventoryTotal":"Inventory Total",
     "static.supplyPlan.batchQtyNotAvailable":"Batch Total does not match Inventory Total",
-    "static.supplyPlan.combinationNotAllowed":"You cannot have combination of FEFO and other batch details",
+    "static.supplyPlan.combinationNotAllowed":"You cannot have combination of QAT auto-calculation and other batch details",
     "static.supplyPlan.qatAutocalculations":"QAT auto-calculation",
     "static.supplyPlan.consumptionFEFO":"QAT Calculation (FEFO)",
     "static.supplyPlan.adjustmentFEFO":"QAT Calculation (Best Case Scenario)"
